tooling/nargo_cli/tests/snapshots/execution_success/nested_array_dynamic/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [(Field, [Field; 3], [Field; 3]); 4], v2: u32):
    v1 = allocate -> &mut [(Field, [Field; 3], [Field; 3]); 4]
    store v0 at v1
    (no terminator instruction)
}
